syntax = "proto3";

package worker;
option go_package = "github.com/pachyderm/pachyderm/src/server/worker";

import "client/pfs/pfs.proto";
import "client/pps/pps.proto";
import "server/worker/common/common.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

message CancelRequest {
  string job_id = 2 [(gogoproto.customname) = "JobID"];
  repeated string data_filters = 1;
}

message CancelResponse {
  bool success = 1;
}

service Worker {
  rpc Status(google.protobuf.Empty) returns (pps.WorkerStatus) {}
  rpc Cancel(CancelRequest) returns (CancelResponse) {}
  rpc GetChunk(GetChunkRequest) returns (stream google.protobuf.BytesValue) {}
}

message GetChunkRequest {
  int64 id = 1;
  int64 shard = 2;
  bool stats = 3;
}

message ShardInfo {}
